[package]
name = "wascc-codec"
version = "0.7.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
description = "Encoding and decoding primitives for waSCC (WebAssembly Secure Capabilities Connector)"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-codec"
readme = "README.md"
keywords = ["webassembly", "wasm", "codec", "wascc"]
categories = ["wasm", "data-structures","encoding"]
homepage = "https://wascc.dev"

[badges]
maintenance = { status = "actively-developed"}


[dependencies]
serde = "1.0.111"
serde_json = "1.0.53"
serde_derive = "1.0.111"
serde_bytes = "0.11.4"
rmp-serde = "0.14.3"
log = { version="0.4.8", features =["std","serde"]}

[dev-dependencies]
structopt = "0.3.14"
serde_json = "1.0.53"
base64 = "0.12.1"

[[example]]      
name = "codectest" 